# cmake-console-app

./: .gitignore  CMakeLists.txt  Dockerfile
cmake/: compiler_warnings.cmake  third_party.cmake
include/: log.hpp  spd_log.hpp
src/: CMakeLists.txt  main.cpp  spd_log.cpp
